Fix fallback mode on JDK 9-15: treat named-module types as locked
On JDK 9-15 with --illegal-access=permit (default), Module.isOpen()
returns true for all packages to unnamed modules. This caused
isInLockedModule() to return false in fallback mode, making
GetterBasedTypeAdapterFactory skip these types and producing
inconsistent serialization output (field-based with circular
reference wrappers instead of getter-based).

In fallback mode, short-circuit to return true for all named-module
types regardless of Module.isOpen() result. This ensures consistent
getter-based behavior across all JDK versions.